[gd_scene load_steps=4 format=3 uid="uid://du57wp2j0l7hg"]

[ext_resource type="Script" path="res://scripts/letter.gd" id="1_fx47v"]
[ext_resource type="Texture2D" uid="uid://r50irbsavmue" path="res://assets/imgs/frame_letras.webp" id="2_ew124"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_84lfx"]
size = Vector2(64, 64)

[node name="Letter" type="Node2D" groups=["draggable"]]
script = ExtResource("1_fx47v")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1.90735e-06, 0)
scale = Vector2(0.533333, 0.533333)
texture = ExtResource("2_ew124")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_84lfx")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
